corpus/c/syntax/case-01/snapshots/gcc15/render.verbose.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: syntax error
--> src/main.c:2:13
help: fix the first parser error at the user-owned location
why: expected ';' before '}}' token
| src/main.c:2:13
|     return 0
|             ^
suggested edit: insert ';' at src/main.c:2:13
debug: rule_id=rule.family.syntax.phase_or_message
debug: matched_conditions=message_contains=expected, message_contains=before, phase=parse
error: syntax error
--> src/main.c:2:13
help: fix the first parser error at the user-owned location
why: src/main.c:2:13: error: expected ';' before '}' token
| src/main.c:2:13
|     return 0
|             ^
raw:
  src/main.c:2:13: error: expected ';' before '}' token
  src/main.c: In function 'main':
      2 |     return 0
        |             ^
debug: rule_id=rule.family.syntax.phase_or_message
debug: matched_conditions=message_contains=expected, message_contains=before, phase=parse
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output